# ruff

./: .gitignore
crates/ruff/src/: args.rs  lib.rs
crates/ruff/src/commands/: mod.rs  raise.rs
crates/ruff_linter/src/checkers/ast/: mod.rs  playground.rs
crates/ruff_linter/src/checkers/ast/analyze/: deferred_scopes.rs  mod.rs  playground.rs
crates/ruff_linter/src/rules/tryceratops/rules/: raise_within_try.rs
crates/ruff_python_raiser/: Cargo.toml
crates/ruff_python_raiser/data/: solutions.json
crates/ruff_python_raiser/data/questions/: 1.py  10.py  15.py  16.py  19.py  2.py  21.py  5.py  7.py  8.py
crates/ruff_python_raiser/examples/: nested_exception.py  notes.md  simple_exception.py
crates/ruff_python_raiser/resources/: notes.md  solutions.json
crates/ruff_python_raiser/resources/tests/: 11.py  12.py  13.py  14.py  17.py  18.py  20.py  22.py  3.py  4.py  5.py  6.py  9.py  playground.py
crates/ruff_python_raiser/src/: exceptions.rs  main.rs
