[package]
name = "ruff_python_raiser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruff_python_parser = { path = "../ruff_python_parser" }
ruff_python_ast ={ path = "../ruff_python_ast" }
[lints]
workspace = true
